REGRESSION (Safari 16): Service worker clientId is empty for web worker fetches https://bugs.webkit.org/show_bug.cgi?id=245425 rdar://problem/100368228

Reviewed by Chris Dumez.

After introducing correct matching of service worker registration for worker loads, we correctly filled resultingClientId to the worker context id.
As per https://html.spec.whatwg.org/multipage/webappapis.html#fetch-a-classic-worker-script, we need to set clientId to the context Id creating the worker.
To do so, we introduce resultingClientId as a FetchOptions so that we can set both clientId and resultingClientId when doing a load.
Set resultingClientId in DocumentLoader and set both clientId and resultingClientId for workers.
Update networking process code to pass clientId and resultingClientId when starting a fetch event.

Drive=by fix, updateAppInitiatedValue needs to hop to main thread.

Covered by newly added test.

* LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/resources/sample-worker-interceptor.js:
* LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/worker-interception.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/worker-interception.https.html:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/service-workers/service-worker/worker-interception.https-expected.txt:
* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::loadMainResource):
* Source/WebCore/loader/FetchOptions.h:
(WebCore::FetchOptions::encode const):
(WebCore::FetchOptions::decode):
* Source/WebCore/workers/WorkerScriptLoader.cpp:
(WebCore::WorkerScriptLoader::loadAsynchronously):
* Source/WebKit/NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.cpp:
(WebKit::ServiceWorkerFetchTask::startFetch):
* Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
(WebKit::WebSWServerConnection::controlClient):
(WebKit::WebSWServerConnection::createFetchTask):
* Source/WebKit/WebProcess/Storage/WebSWContextManagerConnection.cpp:
(WebKit::WebSWContextManagerConnection::updateAppInitiatedValue):

Canonical link: https://commits.webkit.org/254944@main